modules/015-admission-policy-engine/charts/constraint-templates/tests/allow-privileged/test_samples/constraint_templates/pss_baseline/003-allowed-privileged-false.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-privileged-false
  namespace: testns
spec:
  containers:
    - name: nginx
      image: nginx
      securityContext:
        privileged: false
