modules/015-admission-policy-engine/charts/constraint-templates/tests/allow-privileged/test_samples/constraint_templates/pss_baseline/004-disallowed-initContainer-privileged-true.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallowed-initContainer-privileged-true
  namespace: testns
spec:
  initContainers:
    - name: init
      image: busybox
      securityContext:
        privileged: true
  containers:
    - name: nginx
      image: nginx
