modules/015-admission-policy-engine/charts/constraint-templates/tests/allow-privileged/test_samples/constraint_templates/pss_baseline/005-disallowed-multiple-containers-one-privileged-true.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallowed-multiple-containers-one-privileged-true
  namespace: testns
spec:
  containers:
    - name: nginx
      image: nginx
    - name: redis
      image: redis
      securityContext:
        privileged: true
