modules/015-admission-policy-engine/charts/constraint-templates/tests/allow-privileged/test_samples/security_policy_exceptions/exceptions/012-empty-spec.yaml
apiVersion: deckhouse.io/v1alpha1
kind: SecurityPolicyException
metadata:
  namespace: testns
  name: empty-spec
spec:
  test: test
