modules/015-admission-policy-engine/charts/constraint-templates/tests/allow-privileged/test_samples/security_policy_exceptions/exceptions/013-allow-privileged-true-container.yaml
apiVersion: deckhouse.io/v1alpha1
kind: SecurityPolicyException
metadata:
  namespace: testns
  name: allow-privileged-true-container
spec:
  securityContext:
    privileged:
      allowedValue: true
