modules/015-admission-policy-engine/charts/constraint-templates/tests/allow-privileged/test_suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-privileged-container
tests:
- name: pss-baseline
  template: ../../templates/security/allow-privileged.yaml
  constraint: constraint_pss_baseline.yaml
  cases:
  - name: 002-allowed-no-securityContext
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/002-allowed-no-securityContext.yaml
    assertions:
    - violations: no
  - name: 003-allowed-privileged-false
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/003-allowed-privileged-false.yaml
    assertions:
    - violations: no
  - name: 001-allowed-multiple-containers-no-privileged
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/001-allowed-multiple-containers-no-privileged.yaml
    assertions:
    - violations: no
  - name: 006-disallowed-privileged-true
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/006-disallowed-privileged-true.yaml
    assertions:
    - violations: yes
  - name: 005-disallowed-multiple-containers-one-privileged-true
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/005-disallowed-multiple-containers-one-privileged-true.yaml
    assertions:
    - violations: yes
  - name: 004-disallowed-initContainer-privileged-true
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/004-disallowed-initContainer-privileged-true.yaml
    assertions:
    - violations: yes
- name: pss-baseline-with-exception
  template: ../../templates/security/allow-privileged.yaml
  constraint: constraint_pss_baseline.yaml
  cases:
  - name: 011-019-allowed-by-exception-privileged-true
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/011-allow-privileged-true.yaml
    object: test_samples/security_policy_exceptions/pods/019-allowed-by-exception-privileged-true.yaml
    assertions:
    - violations: no
  - name: 010-015-allowed-by-exception-privileged-false
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/010-allow-privileged-false.yaml
    object: test_samples/security_policy_exceptions/pods/015-allowed-by-exception-privileged-false.yaml
    assertions:
    - violations: no
  - name: 011-013-allowed-by-exception-multiple-containers-all-privileged-true
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/011-allow-privileged-true.yaml
    object: test_samples/security_policy_exceptions/pods/013-allowed-by-exception-multiple-containers-all-privileged-true.yaml
    assertions:
    - violations: no
  - name: 011-017-allowed-by-exception-privileged-mismatch-but-constraint-allows-false-no-securityContext
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/011-allow-privileged-true.yaml
    object: test_samples/security_policy_exceptions/pods/017-allowed-by-exception-privileged-mismatch-but-constraint-allows-false.yaml
    assertions:
    - violations: no
  - name: 011-016-allowed-by-exception-privileged-mismatch-but-constraint-allows-false-privileged-false
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/011-allow-privileged-true.yaml
    object: test_samples/security_policy_exceptions/pods/016-allowed-by-exception-privileged-mismatch-but-constraint-allows-false-privileged-false.yaml
    assertions:
    - violations: no
  - name: 011-014-allowed-by-exception-multiple-containers-one-mismatch-but-constraint-allows-false
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/011-allow-privileged-true.yaml
    object: test_samples/security_policy_exceptions/pods/014-allowed-by-exception-multiple-containers-one-mismatch-but-constraint-allows-false.yaml
    assertions:
    - violations: no
  - name: 020-disallowed-no-exception-label
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/security_policy_exceptions/pods/020-disallowed-no-exception-label.yaml
    assertions:
    - violations: yes
  - name: 012-021-disallowed-by-exception-empty-spec
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/012-empty-spec.yaml
    object: test_samples/security_policy_exceptions/pods/021-disallowed-by-exception-empty-spec.yaml
    assertions:
    - violations: yes
  - name: 013-022-allowed-by-container-specific-exception-privileged-true
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/013-allow-privileged-true-container.yaml
    object: test_samples/security_policy_exceptions/pods/022-allowed-by-container-exception-privileged-true.yaml
    assertions:
    - violations: no
  - name: 010-013-023-allowed-by-merged-exception-container-overrides-global
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/010-allow-privileged-false.yaml
    - test_samples/security_policy_exceptions/exceptions/013-allow-privileged-true-container.yaml
    object: test_samples/security_policy_exceptions/pods/023-allowed-by-merged-exception-container-overrides-global.yaml
    assertions:
    - violations: no
